# somevar-ui-playground

./: .gitignore  LICENSE  README.md  pyproject.toml  somevar-ui.toml
.github/workflows/: ci.yml
src/somevar_ui_playground/: __init__.py  main.py  registration.py  storage.py
src/somevar_ui_playground/ui/: __init__.py  pages.py  playground_support.py  window.py
tests/: test_framework_public_imports.py  test_playground_registration.py  test_ui_smoke.py
